--- a/CustomView/CustomView/PopUp/PopUp.xib
+++ b/CustomView/CustomView/PopUp/PopUp.xib
@@ -1,22 +1,104 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PopUp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PopUp" customModule="CustomView" customModuleProvider="target">
             <connections>
+                <outlet property="containerView" destination="y00-V5-KKZ" id="7CB-aB-t2s"/>
+                <outlet property="descriptionLabel" destination="uVo-9O-j33" id="Sab-Zw-oHV"/>
+                <outlet property="imageView" destination="cpZ-1v-SQY" id="zKA-zv-rmy"/>
+                <outlet property="joinButton" destination="N3m-hJ-n0u" id="EID-OY-vES"/>
+                <outlet property="titleLabel" destination="NgB-f4-9bi" id="5wM-ob-ROU"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y00-V5-KKZ">
+                    <rect key="frame" x="20" y="258.66666666666669" width="335" height="305.00000000000006"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn_popup" translatesAutoresizingMaskIntoConstraints="NO" id="837-aE-lkN">
+                            <rect key="frame" x="85" y="-82.000000000000028" width="165" height="165"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="837-aE-lkN" secondAttribute="height" multiplier="1:1" id="4bI-EF-Wb5"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아요 세계로 가봅시다!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NgB-f4-9bi">
+                            <rect key="frame" x="47.666666666666671" y="119" width="239.66666666666663" height="34"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                            <color key="textColor" red="0.32549019607843138" green="0.28235294117647058" blue="0.80784313725490198" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVo-9O-j33">
+                            <rect key="frame" x="45.333333333333329" y="161" width="244.33333333333337" height="48"/>
+                            <string key="text">그만두는 것은 자유가 아닙니다.
+그래도 함께하실래요?</string>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                            <color key="textColor" red="0.27058823529411763" green="0.31764705882352939" blue="0.32941176470588235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N3m-hJ-n0u">
+                            <rect key="frame" x="20" y="235" width="295" height="50"/>
+                            <color key="backgroundColor" red="0.32941176470588235" green="0.30196078431372547" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="DkO-OC-qWU"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title="힘께 하기">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="joinButtonDidTap:" destination="-1" eventType="touchUpInside" id="1Gd-ha-x55"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="806-Ch-m9n">
+                            <rect key="frame" x="289" y="10" width="36" height="36"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="icn_close"/>
+                            <connections>
+                                <action selector="closeButtonDidTap:" destination="-1" eventType="touchUpInside" id="ahw-2S-dn1"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" red="0.87450980392156863" green="0.85882352941176465" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="837-aE-lkN" firstAttribute="top" secondItem="y00-V5-KKZ" secondAttribute="top" constant="-82" id="0yF-ct-U9h"/>
+                        <constraint firstAttribute="trailing" secondItem="806-Ch-m9n" secondAttribute="trailing" constant="10" id="Hel-IU-Z0U"/>
+                        <constraint firstItem="uVo-9O-j33" firstAttribute="top" secondItem="NgB-f4-9bi" secondAttribute="bottom" constant="8" id="LeZ-Dh-TTW"/>
+                        <constraint firstItem="NgB-f4-9bi" firstAttribute="top" secondItem="837-aE-lkN" secondAttribute="bottom" constant="36" id="MME-JD-vci"/>
+                        <constraint firstItem="N3m-hJ-n0u" firstAttribute="leading" secondItem="y00-V5-KKZ" secondAttribute="leading" constant="20" id="OUs-tx-YtN"/>
+                        <constraint firstItem="806-Ch-m9n" firstAttribute="top" secondItem="y00-V5-KKZ" secondAttribute="top" constant="10" id="PS5-En-ogN"/>
+                        <constraint firstAttribute="bottom" secondItem="N3m-hJ-n0u" secondAttribute="bottom" constant="20" id="VMV-rJ-2RZ"/>
+                        <constraint firstItem="NgB-f4-9bi" firstAttribute="centerX" secondItem="837-aE-lkN" secondAttribute="centerX" id="cpZ-1v-SQY"/>
+                        <constraint firstItem="uVo-9O-j33" firstAttribute="centerX" secondItem="NgB-f4-9bi" secondAttribute="centerX" id="lUi-18-yH8"/>
+                        <constraint firstItem="837-aE-lkN" firstAttribute="centerX" secondItem="y00-V5-KKZ" secondAttribute="centerX" id="sYN-at-FCA"/>
+                        <constraint firstAttribute="trailing" secondItem="N3m-hJ-n0u" secondAttribute="trailing" constant="20" id="xF2-c5-0aL"/>
+                        <constraint firstAttribute="width" secondItem="y00-V5-KKZ" secondAttribute="height" multiplier="335:305" id="xgY-xq-DjV"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="y00-V5-KKZ" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="5" id="JZi-zJ-kYE"/>
+                <constraint firstItem="y00-V5-KKZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="qTx-Ik-jlb"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="y00-V5-KKZ" secondAttribute="trailing" constant="20" id="wOr-6I-MBv"/>
+            </constraints>
+            <point key="canvasLocation" x="131.8840579710145" y="131.91964285714286"/>
         </view>
     </objects>
+    <resources>
+        <image name="icn_close" width="36" height="36"/>
+        <image name="icn_popup" width="165" height="165"/>
+    </resources>
 </document>
