[#7] Dynamic Bottom Sheet

--- a/CustomView/CustomView/MainScene/Base.lproj/Main.storyboard
+++ b/CustomView/CustomView/MainScene/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="OpK-tp-r4c">
-                                <rect key="frame" x="20" y="353" width="374" height="190"/>
+                                <rect key="frame" x="20" y="314.5" width="374" height="267"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mSm-11-AB8">
                                         <rect key="frame" x="154.5" y="0.0" width="65" height="36"/>
@@ -45,6 +45,16 @@
                                         <state key="normal" title="Tab Pager"/>
                                         <connections>
                                             <action selector="tabPagerButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="voe-zV-l9i"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9mz-cQ-PIK">
+                                        <rect key="frame" x="86" y="231" width="202" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Dynamic Bottom Sheet"/>
+                                        <connections>
+                                            <action selector="dynamicBottomSheetButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jid-1b-4x3"/>
+                                            <action selector="tabPagerButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OX6-DB-cdp"/>
                                         </connections>
                                     </button>
                                 </subviews>
