[#7] Dynamic Bottom Sheet 내부에 컨텐츠 추가

--- a/CustomView/CustomView/DynamicBottomSheet/DynamicBottomSheetViewController.xib
+++ b/CustomView/CustomView/DynamicBottomSheet/DynamicBottomSheetViewController.xib
@@ -13,7 +13,7 @@
             <connections>
                 <outlet property="containerView" destination="k2j-iG-pwn" id="bJ5-6d-2pd"/>
                 <outlet property="dimmedView" destination="Xw1-XB-Xbw" id="yyG-C2-4Sp"/>
-                <outlet property="sheetBottom" destination="5DN-l4-WtM" id="GJi-em-dFa"/>
+                <outlet property="sheetBottom" destination="btV-Wa-WR1" id="7kh-QB-LYc"/>
                 <outlet property="sheetHeight" destination="tWJ-YV-HIT" id="diJ-PG-iuG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -25,29 +25,25 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xw1-XB-Xbw" userLabel="dimmnedView">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2j-iG-pwn">
-                            <rect key="frame" x="0.0" y="596" width="414" height="300"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="300" id="tWJ-YV-HIT"/>
-                            </constraints>
-                        </view>
-                    </subviews>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2j-iG-pwn">
+                    <rect key="frame" x="0.0" y="596" width="414" height="300"/>
+                    <viewLayoutGuide key="safeArea" id="f3W-uP-yvn"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="k2j-iG-pwn" secondAttribute="bottom" id="5DN-l4-WtM"/>
-                        <constraint firstAttribute="trailing" secondItem="k2j-iG-pwn" secondAttribute="trailing" id="NfU-S7-FxZ"/>
-                        <constraint firstItem="k2j-iG-pwn" firstAttribute="leading" secondItem="Xw1-XB-Xbw" secondAttribute="leading" id="XsG-KK-e9O"/>
+                        <constraint firstAttribute="height" constant="300" id="tWJ-YV-HIT"/>
                     </constraints>
                 </view>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="Xw1-XB-Xbw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="2f1-qK-RhA"/>
-                <constraint firstItem="Xw1-XB-Xbw" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="DTH-9a-N8O"/>
+                <constraint firstItem="Xw1-XB-Xbw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="2f1-qK-RhA"/>
+                <constraint firstItem="k2j-iG-pwn" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="AZJ-qf-af8"/>
+                <constraint firstItem="k2j-iG-pwn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="B8R-UA-Bue"/>
+                <constraint firstItem="Xw1-XB-Xbw" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="DTH-9a-N8O"/>
                 <constraint firstAttribute="bottom" secondItem="Xw1-XB-Xbw" secondAttribute="bottom" id="MY9-AS-c1n"/>
+                <constraint firstAttribute="bottom" secondItem="k2j-iG-pwn" secondAttribute="bottom" id="btV-Wa-WR1"/>
                 <constraint firstItem="Xw1-XB-Xbw" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="qxR-0w-jNy"/>
             </constraints>
             <point key="canvasLocation" x="131.8840579710145" y="131.91964285714286"/>
