--- a/CustomView/CustomView/MainScene/Base.lproj/Main.storyboard
+++ b/CustomView/CustomView/MainScene/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sOI-41-g1Z">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -54,13 +54,12 @@
                                         <state key="normal" title="Dynamic Bottom Sheet"/>
                                         <connections>
                                             <action selector="dynamicBottomSheetButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jid-1b-4x3"/>
-                                            <action selector="tabPagerButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OX6-DB-cdp"/>
                                         </connections>
                                     </button>
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="메인 화면" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5p-kZ-P6b">
-                                <rect key="frame" x="159" y="64" width="96" height="31.5"/>
+                                <rect key="frame" x="159" y="108" width="96" height="31.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -76,10 +75,29 @@
                             <constraint firstItem="OpK-tp-r4c" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="kIL-3P-c5L"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="5wY-If-AEW"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="126" y="51"/>
+            <point key="canvasLocation" x="1034.7826086956522" y="50.892857142857139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LEY-ez-Cz5">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sOI-41-g1Z" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BTD-UV-ogu">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="CS8-Jl-zMt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wIE-dB-Es0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="124.6376811594203" y="50.892857142857139"/>
         </scene>
     </scenes>
     <resources>
